--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -57,7 +57,7 @@
       />
       <div *ngIf="formControls.password.invalid && (formControls.password.touched || formControls.password.dirty || submit)">
         <small *ngIf="formControls.password.errors.required">Password is required</small>
-        <small *ngIf="formControls.password.errors.pattern">Password should be 8-15 characters and must contain 1 number and 1 special character</small>
+        <small *ngIf="formControls.password.errors.pattern">Password should be 8-15 characters and must contain, an alphabet, a number and a special character</small>
       </div>
     </div>
 
