Added Route Guard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
-<app-sign-up></app-sign-up>
-<app-login></app-login>
+<div class="page-header">
+  <h1>Welcome to ChatScrum</h1>
+</div>
 
 <router-outlet></router-outlet>
