--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <h2 class="signup-header">Login</h2>
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" novalidate>
+
+    <h4 class="text-danger">{{ feedback }}</h4>
+  <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" novalidate>
     <div class="form-group">
       <label for="email">Email: </label>
       <input
@@ -42,7 +44,8 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary btn-block">Login</button>
   </form>
+  <p>Don't have an account? <a routerLink="/signup">Signup here</a></p>
 
 </div>
