--- a/src/app/scrumboard/scrumboard.component.html
+++ b/src/app/scrumboard/scrumboard.component.html
@@ -1,1 +1,56 @@
-<p>scrumboard works!</p>
+<br>
+<table *ngFor="let participant of participants" class="table">
+  <hr>
+  <p><strong>{{ participant['user']['nickname'] }}</strong></p>
+
+  <tr>
+    <th>Tasks For The Week</th>
+    <th>Tasks For The Day</th>
+    <th>Verify</th>
+    <th>Done</th>
+  </tr>
+
+  <tr>
+    <td>
+      <div *ngFor="let goal of participant['scrumgoal_set']">
+        <div *ngIf="goal['status'] == 0 && goal['user'] == participant['id']">
+          {{ goal['name'] }} <br>
+          {{ goal['id'] }}
+          <p>Status: {{ goal['status'] }}</p>
+        </div>
+
+      </div>
+    </td>
+    <td>
+      <div *ngFor="let goal of participant['scrumgoal_set']">
+        <div *ngIf="goal['status'] == 1 && goal['user'] == participant['id']">
+          {{ goal['name'] }} <br>
+          {{ goal['id'] }}
+          <p>Status: {{ goal['status'] }}</p>
+        </div>
+
+      </div>
+    </td>
+    <td>
+      <div *ngFor="let goal of participant['scrumgoal_set']">
+        <div *ngIf="goal['status'] == 2 && goal['user'] == participant['id']">
+          {{ goal['name'] }} <br>
+          {{ goal['id'] }}
+          <p>Status: {{ goal['status'] }}</p>
+        </div>
+
+      </div>
+    </td>
+    <td>
+      <div *ngFor="let goal of participant['scrumgoal_set']">
+        <div *ngIf="goal['status'] == 3 && goal['user'] == participant['id']">
+          {{ goal['name'] }} <br>
+          {{ goal['id'] }}
+          <p>Status: {{ goal['status'] }}</p>
+        </div>
+
+      </div>
+    </td>
+  </tr>
+
+</table>
