--- a/src/app/scrumboard/scrumboard.component.html
+++ b/src/app/scrumboard/scrumboard.component.html
@@ -19,14 +19,12 @@
 
     <td cdkDropList #task_for_the_week="cdkDropList" [cdkDropListData]="taskForTheWeek"
       [cdkDropListConnectedTo]="[task_for_the_day]" (cdkDropListDropped)="drop($event)">
-      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag>
+      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag 
+      [cdkDragDisabled]="!(goal['user'] != participant['id'])">
         <div *ngIf="goal['status'] == 0 && goal['user'] == participant['id']">
           {{ goal['name'] }} <br>
           {{ goal['id'] }}
           <p>Status: {{ goal['status'] }}</p>
-
-
-
         </div>
 
       </div>
@@ -34,7 +32,8 @@
 
     <td cdkDropList #task_for_the_day="cdkDropList" [cdkDropListData]="taskForTheDay"
       [cdkDropListConnectedTo]="[task_for_the_week, task_verified]" (cdkDropListDropped)=drop($event)>
-      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag>
+      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag
+      [cdkDragDisabled]="!(goal['user'] != participant['id'])">
         <div *ngIf="goal['status'] == 1 && goal['user'] == participant['id']">
           {{ goal['name'] }} <br>
           {{ goal['id'] }}
@@ -45,7 +44,8 @@
     </td>
     <td cdkDropList #task_verified="cdkDropList" [cdkDropListData]="taskVerified"
       [cdkDropListConnectedTo]="[task_for_the_day]" (cdkDropListDropped)=drop($event)>
-      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag>
+      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag
+      [cdkDragDisabled]="!(goal['user'] != participant['id'])">
         <div *ngIf="goal['status'] == 2 && goal['user'] == participant['id']">
           {{ goal['name'] }} <br>
           {{ goal['id'] }}
@@ -56,7 +56,8 @@
     </td>
     <td cdkDropList #task_done="cdkDropList" [cdkDropListData]="taskDone"
       [cdkDropListConnectedTo]="[task_for_the_day, task_for_the_week, task_verified]" (cdkDropListDropped)=drop($event)>
-      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag>
+      <div *ngFor="let goal of participant['scrumgoal_set']" [cdkDragData]="goal" cdkDrag
+      [cdkDragDisabled]="!(goal['user'] != participant['id'])">
         <div *ngIf="goal['status'] == 3 && goal['user'] == participant['id']">
           {{ goal['name'] }} <br>
           {{ goal['id'] }}
