--- a/src/app/scrumboard/scrumboard.component.html
+++ b/src/app/scrumboard/scrumboard.component.html
@@ -1,10 +1,44 @@
 <br>
+<div  style="max-height:50%; overflow-y:scroll; border: 2px solid black; background: white; position: absolute; bottom: 100px; right:40px; width: 40%">
+<div class="container">
+<div class="row" *ngFor="let message of messages">
+  <div class="col-sm-10 offset-2 text-right" *ngIf="message.user == loggedUser.name">
+  <p style="margin-bottom:2px;">You</p>
+  <p><span style="background-color:black; color:white; padding:10px; border-radius:5px;">{{message.data}}</span></p>
+  </div>
+  <div class="col-sm-10" *ngIf="message.user != loggedUser.name">
+    <p style="margin-bottom:2px;">{{message.user}}</p>
+    <p><span style="background-color:blue; color:white; padding:10px; border-radius:5px;">{{message.data}}</span></p>
+    </div>
+</div>
+<form [formGroup]="chatForm" (ngSubmit)="send()" style="position:fixed; width:40%; bottom:10px; right: 40px;">
+  <div class="form-group">
+    
+    <input
+      type="text"
+      formControlName="chat"
+      class="form-control"
+      placeholder="type your message"
+      name="chat"
+    />
+  </div>
+
+  <button type="submit" class="btn btn-primary btn-block">Send</button>
+</form>
+</div>
+</div>
+<br>
+
+<button class="btn btn-danger" (click)="logout()">Logout</button>
 <table *ngFor="let participant of participants" class="table">
   <hr>
   <p><strong>{{ participant['user']['nickname'] }}</strong></p>
   <div *ngIf="loggedUser.role == 'Owner'">
       <a class="btn btn-primary" routerLink="/changerole/{{projectId}}">Change Role</a>
   </div>
+  <div>
+    
+</div>
 
   <tr>
     <th>Tasks For The Week</th>
@@ -12,7 +46,7 @@
     <th>Verify</th>
     <th>Done</th>
   </tr>
-
+  
   <!-- Role Developer-->
   <tr *ngIf="loggedUser.role == 'Developer'">
     <!-- Role Develop-->
