Added database to chat

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,5 +2,6 @@
   <nav>
     <a routerLink='/signup' class="btn btn-primary">Sign Up</a>
     <a routerLink='/login' class="btn btn-primary">Login</a>
+    <a routerLink='/createproject' class="btn btn-primary">Create Project</a>
   </nav>
 </div>
