--- a/src/app/scrumboard/scrumboard.component.html
+++ b/src/app/scrumboard/scrumboard.component.html
@@ -1,5 +1,6 @@
 <br>
-<div  style="max-height:50%; overflow-y:scroll; border: 2px solid black; background: white; position: absolute; bottom: 100px; right:40px; width: 40%">
+
+<div  style="max-height:50%; overflow-y:scroll; border: 2px solid black; background: white; position: fixed; bottom: 100px; right:40px; width: 40%" cdkDrag>
 <div class="container">
 <div class="row" *ngFor="let message of messages">
   <div class="col-sm-10 offset-2 text-right" *ngIf="message.email == authUserEmail">
@@ -11,7 +12,7 @@
     <p><span style="background-color:blue; color:white; padding:10px; border-radius:5px;">{{message.message}}</span></p>
     </div>
 </div>
-<form [formGroup]="chatForm" (ngSubmit)="send()" style="position:fixed; width:40%; bottom:10px; right: 40px;">
+<form [formGroup]="chatForm" (ngSubmit)="send()" class="mt-3" style="position:relative; width:100%; bottom:10px">
   <div class="form-group">
     
     <input
@@ -20,6 +21,7 @@
       class="form-control"
       placeholder="type your message"
       name="chat"
+      autofocus
     />
   </div>
 
@@ -28,14 +30,32 @@
 </div>
 </div>
 <br>
+<div class="container">
+    <form [formGroup]="createGoal" (ngSubmit)="addGoal()">
+        <div class="form-group">
+          
+          <input
+            type="text"
+            formControlName="goal"
+            class="form-control"
+            placeholder="Add your goal for the week"
+            name="chat"
+          />
+        </div>
+      
+        <button type="submit" class="btn btn-primary btn-block">Add Goal</button>
+      </form>
 
+</div>
+<div *ngIf="loggedUser.role == 'Owner'" class="mt-3">
+  <a class="btn btn-primary" routerLink="/changerole/{{projectId}}">Change Role</a>
+  <button type="submit" class="btn btn-primary" (click)="createSprint()">Create Sprint</button>
+</div>
 <button class="btn btn-danger" (click)="logout()">Logout</button>
 <table *ngFor="let participant of participants" class="table">
   <hr>
   <p><strong>{{ participant['user']['nickname'] }}</strong></p>
-  <div *ngIf="loggedUser.role == 'Owner'">
-      <a class="btn btn-primary" routerLink="/changerole/{{projectId}}">Change Role</a>
-  </div>
+ 
   <div>
     
 </div>
